--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             );
         }
         function KmToMiles() {
-            return (<h3>Km to Miles</h3>);
+            return (
+                <h3>Km to Miles</h3>
+            );
         }
         function App() {
             const [index, setIndex] = React.useState("x");
