--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <body>
         <div id="root"></div>
     </body>
-    <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-        function Btn({ text, active }) {
-            return <button 
+        function Btn({ text, onClick, active }) {
+            console.log(text, "was rendered.");
+            return <button
+                onClick={onClick}
                 style={{
                     backgroundColor: active ? "tomato" : "gray",
                     color: "white",
@@ -20,11 +23,19 @@
                 {text}
             </button>
         }
+        const MemorizedBtn = React.memo(Btn);
+        MemorizedBtn.propTypes = {
+            text: PropTypes.string.isRequired,
+            onClick: PropTypes.func,
+            active: PropTypes.bool,
+        }
         function App() {
+            const [value, setValue] = React.useState("Save Changes");
+            const changeValue = () => setValue("Revert Changes");
             return(
                 <div>
-                    <Btn text="Save Changes" active={true} />
-                    <Btn text="Confirm" active={false} />
+                    <MemorizedBtn text={value} onClick={changeValue} active={true} />
+                    <MemorizedBtn text="Confirm" active={false} />
                 </div>
             );
         }
