--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             const changeValue = () => setValue("Revert Changes");
             return(
                 <div>
-                    <MemorizedBtn text={value} onClick={changeValue} active={true} />
+                    <MemorizedBtn text={value} active={true} />
                     <MemorizedBtn text="Confirm" active={false} />
                 </div>
             );
